Реализация логики калькулятора на js

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <input type="number " class="counter" id="counter-block" />
       </div>
       <div class="blocks" id="pages-block">
-        <div class="blocks-title">Количесвто страниц</div>
+        <div class="blocks-title">Количество страниц</div>
         <input type="number " class="counter" id="counter-pages" />
       </div>
       <div class="blocks">
@@ -51,5 +51,6 @@
         <input value="5000" type="text" class="total-count" id="total-value" />
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
